2004-06-21  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Splitted.

	* lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/book_providers.rb,
	  lib/alexandria/book_providers,
	  lib/alexandria/library.rb:

	- Added ;
	- The Proxis provider has been contributed by Pascal Terjan ; 
	- Do not save covers that are blank ;
	- The book providers factory should handle multiple providers now.

	* lib/alexandria/ui/icons.rb:

	Uses the default icon when the cover files don't exist.

	* lib/alexandria/ui/preferences_dialog.rb:

	Handles providers that don't provide any preference, and display
	an error message when the user tries to setup them.

2004-06-20  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/ui/main_app.rb,
	  bin/alexandria:

	Don't split string inside multibyte character (#660)

2004-06-20  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	It is now possible to add multiple books at once, by selecting
	several books in the search results list.

2004-06-19  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/book.rb:

	- Improved the add new book dialog to allow searches by authors and
	  keyword ;
	- Validate ISBNs before sending them to providers ;
	- Perform an ISBN search when enter is detected in the ISBN entry ;
	- Fixed a bug in the Amazon provider, when some books that are not
	  released yet don't have a 'manufacturer' attribute.

2004-06-19  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/book.rb:

	Rewrote the ISBN code to be more Rubyish and made it allow 13-digit
	EAN numbers.

2004-06-18  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog.rb:

	Fixed a bug when Alexandria crashed in the add new book dialog when the 
	clipboard was empty.
