@@ -1,3 +1,10 @@
+2004-06-22  Pascal Terjan  <pterjan@linuxfr.org>
+
+	* lib/alexandria/book_providers/proxis.rb:
+
+	- Moved book creation to parse_book ;
+	- Added a preference for the language.
+	
 2004-06-21  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/book.rb:
